Tuto_Kubernetes/Admission-Controller/replica-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: minimum-replicas
spec:
  validationFailureAction: Enforce
  rules:
    - name: minimum-replicas
      match:
        any:
          - resources:
              kinds:
                - Deployment
      validate:
        message: "You must have team more then 3 replicas in each deployment"
        pattern:
          spec:
            replicas: ">=3"
